--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="ds-header-inner">
               <!-- logo -->
               <a href="index.html" class="ds-logo">
-                <span>J</span>Jason Stroff
+                <span>A</span>naelle De Freitas
               </a>
               <!-- logo -->
               <!-- social -->
@@ -54,21 +54,12 @@
           <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
             <section>
                 <h1>
-                  <span>HI THERE</span>
-                  I’m Jason Stroff <br> UI/UX DESIGNER + DEVELOPER based in Florida.
+                  <span>ENCHANTÉE !</span>
+                  Anaelle De Freitas, <br>étudiante à Lyon
                 </h1>
                 <ul class="ds-numbervalulist">
                   <li>
-                    <strong>6+</strong>
-                    <span>Experience</span>
-                  </li>
-                  <li>
-                    <strong>89</strong>
-                    <span>Projects</span>
-                  </li>
-                  <li>
-                    <strong>52</strong>
-                    <span>Happy Clients</span>
+                    <strong>ESABAC</strong>
                   </li>
                 </ul>
             </section>
@@ -82,8 +73,13 @@
     <div class="ds-about-section">
       <div class="container">
         <section>
-            <h2 class="ds-heading">About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis interdum ante a porta blandit. Quisque velit tortor, ultricies in quam ut, luctus convallis metus. Nunc vitae felis rutrum, mattis justo quis, bibendum tellus. Integer bibendum eget dolor nec venenatis. Aliquam erat volutpat. Etiam et est vitae turpis accumsan vulputate. Curabitur et vehicula nisl, eu congue dolor. Vivamus nec hendrerit mi Nulla consequat tempor.</p>
+            <h2 class="ds-heading">À propos de moi</h2>
+            <p>Après l'obtention de mon BAC binational franco-italien, je me suis tournée
+            vers des études de médecines comprenant un enseignement informatique. Je me
+            suis rapidement rendue compte que ce n'était pas ce que je voulais faire.
+            Aujourd'hui, je me réoriente dans des études de communication, de développement
+            web et d'audiovisuel. Avec comme objetcif le BUT Métiers du Multimédia et de
+            l'Internet (MMI) que j'ai découvert en terminale lors de mes recherches.</p>
             <div class="ds-button-sec text-center">
                 <a href="#" class="ds-button">Download Resume</a>
             </div>
@@ -97,27 +93,26 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-             <h2 class="ds-heading">Core Skills</h2>
+             <h2 class="ds-heading">Hard Skills</h2>
              <ul class="ds-skills-list">
-               <li>JavaScript</li>
-               <li>Node.js</li>
-               <li>Express.js</li>
-               <li>MongoDB</li>
-               <li>Vue.js</li>
-               <li>React</li>
-               <li>Sequelize</li>
-               <li>Github</li>
+               <li>Pyhon</li>
                <li>HTML</li>
+               <li>CSS</li>
+               <li>Github</li>
+               <li>Suite Adobe</li>
+               <li>Dessin</li>
+               <li>Italiano 🤌</li>
+               <li>English 🍵</li>
              </ul>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-            <h2 class="ds-heading">Other Skills</h2>
+            <h2 class="ds-heading">Soft Skills</h2>
             <ul class="ds-skills-list">
-              <li>Storyblok</li>
-              <li>PWAs</li>
-              <li>Responsive Web Design</li>
-              <li>React</li>
-              <li>Vuetify</li>
+              <li>Intelligence collective</li>
+              <li>Organisation</li>
+              <li>Communication</li>
+              <li>Créativité</li>
+              <li>Détermination</li>
             </ul>
           </div>
         </div>
