--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <link href="assets/css/main.css" rel="stylesheet">
 
 
-    <title>Defolio - Bootstrap 5 html resume template </title>
+    <title>PORTFOLIO - Anaelle DE FREITAS</title>
   </head>
   <body>
    
@@ -81,7 +81,7 @@
             web et d'audiovisuel. Avec comme objetcif le BUT Métiers du Multimédia et de
             l'Internet (MMI) que j'ai découvert en terminale lors de mes recherches.</p>
             <div class="ds-button-sec text-center">
-                <a href="#" class="ds-button">Download Resume</a>
+                <a href="#" class="ds-button" download="cv.pdf">Mon CV</a>
             </div>
         </section>
       </div>
