--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                <li>Github</li>
                <li>Suite Adobe</li>
                <li>Dessin</li>
-               <li>Italiano 🤌</li>
+               <li>Italiano &#129292;</li>
                <li>English 🍵</li>
              </ul>
           </div>
@@ -121,44 +121,44 @@
     <!--  Skills -->
 
    <!-- Experience -->
-   <div class="ds-experience-section">
-     <div class="container">
-        <h2 class="ds-heading">Work Experience</h2>
-        <div class="row ds-experience-list">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-              <section>
-                <span class="ds-year">2019 - Present</span>
-                <h3 class="ds-officename">Matrix Media Inc</h3>
-                <span class="ds-department">Full Stack developer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                </ul>
-              </section>
-            </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-              <section>
-                <span class="ds-year">2018 - 2019</span>
-                <h3 class="ds-officename">Lexind</h3>
-                <span class="ds-department">Senior app developer</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
-                </ul>
-              </section>
-            </div>
-        </div>
-     </div>
-   </div>
+<!--   <div class="ds-experience-section">-->
+<!--     <div class="container">-->
+<!--        <h2 class="ds-heading">Work Experience</h2>-->
+<!--        <div class="row ds-experience-list">-->
+<!--            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
+<!--              <section>-->
+<!--                <span class="ds-year">2019 - Present</span>-->
+<!--                <h3 class="ds-officename">Matrix Media Inc</h3>-->
+<!--                <span class="ds-department">Full Stack developer</span>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>-->
+<!--                <ul>-->
+<!--                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>-->
+<!--                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>-->
+<!--                </ul>-->
+<!--              </section>-->
+<!--            </div>-->
+<!--            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
+<!--              <section>-->
+<!--                <span class="ds-year">2018 - 2019</span>-->
+<!--                <h3 class="ds-officename">Lexind</h3>-->
+<!--                <span class="ds-department">Senior app developer</span>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>-->
+<!--                <ul>-->
+<!--                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>-->
+<!--                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>-->
+<!--                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>-->
+<!--                </ul>-->
+<!--              </section>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--     </div>-->
+<!--   </div>-->
     <!-- Experience -->
 
    <!--  Work -->
    <div class="ds-work-section">
      <div class="container">
-          <h2 class="ds-heading">Latest works</h2>
+          <h2 class="ds-heading">Mes projets</h2>
           <div class="ds-work-list-section">
             <div class="ds-work-list">
               <div class="row">
@@ -166,7 +166,7 @@
                       <section>
                           <h3 class="ds-work-tilte">Tripy mobile app</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="works-setails.html" class="ds-button">Détails</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -180,7 +180,7 @@
                       <section>
                           <h3 class="ds-work-tilte">Hello mobile app</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="works-setails.html" class="ds-button">Détails</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -194,7 +194,7 @@
                       <section>
                           <h3 class="ds-work-tilte">Cute cookies app</h3>
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non sodales. </p>
-                          <a href="works-setails.html" class="ds-button">Details</a>
+                          <a href="works-setails.html" class="ds-button">Détails</a>
                       </section>
                   </div>
                   <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
@@ -211,25 +211,18 @@
    <footer class="ds-footer text-center">
      <div class="container">
         <section>
-          <span>Stay in touch</span>
-          <h4>Ready to talk?</h4>
-          <p>Feel free to contact us</p>
-          <a href="mailto:test@test.com" class="ds-button">Lets Talk</a>
+          <span>CONTACT</span>
+          <h4>Besoin d'informations ?</h4>
+          <p>N'hésitez pas à m'envoyer un mail</p>
+          <a href="mailto:anaelledefreitas@gmail.com" class="ds-button">Me contacter</a>
         </section>
-        <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
      </div>
    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
