--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
               <!-- logo -->
               <!-- social -->
               <ul class="ds-social">
-                <li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                <li><a href="https://github.com/Anaelle-dfrts" target="_blank"><i class="ri-github-fill"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/anaelle-de-freitas/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
               </ul>
               <!-- social -->
             </div>
