--- a/works-setails.html
+++ b/works-setails.html
@@ -18,7 +18,7 @@
       <link href="assets/css/main.css" rel="stylesheet">
 
 
-    <title>Jason Stroff</title>
+    <title>PORTFOLIO - anaelle DE FREITAS</title>
   </head>
   <body>
    
@@ -28,14 +28,13 @@
             <div class="ds-header-inner">
               <!-- logo -->
               <a href="index.html" class="ds-logo">
-                <span>J</span>Jason Stroff
+                <span>A</span>naelle De Freitas
               </a>
               <!-- logo -->
               <!-- social -->
               <ul class="ds-social">
-                <li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                  <li><a href="https://github.com/Anaelle-dfrts" target="_blank"><i class="ri-github-fill"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/anaelle-de-freitas/" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
               </ul>
               <!-- social -->
             </div>
@@ -47,7 +46,7 @@
      <div class="container">
         <div class="ds-work-details-section">
             <div class="text-center">
-              <a href="index.html" class="ds-button ds-arrow-button"><i class="ri-arrow-left-s-line"></i> BAck</a>
+              <a href="index.html" class="ds-button ds-arrow-button"><i class="ri-arrow-left-s-line"></i> RETOUR</a>
             </div>
             <div class="row justify-content-center">
               <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10 col-xxl-10">
@@ -88,29 +87,23 @@
      </div>
    </main>
 
-   <!--  footer -->
-   <footer class="ds-footer text-center">
-     <div class="container">
-        <section>
-          <span>Stay in touch</span>
-          <h4>Ready to talk?</h4>
-          <p>Feel free to contact us</p>
-          <a href="mailto:test@test.com" class="ds-button">Lets Talk</a>
-        </section>
-        <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
-     </div>
-   </footer>
+    <!--  footer -->
+    <footer class="ds-footer text-center">
+        <div class="container">
+            <section>
+                <span>CONTACT</span>
+                <h4>Besoin d'informations ?</h4>
+                <p>N'hésitez pas à m'envoyer un mail</p>
+                <a href="mailto:anaelledefreitas@gmail.com" class="ds-button">Me contacter</a>
+            </section>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
