--- a/index.html
+++ b/index.html
@@ -182,14 +182,15 @@
                     <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                         <section>
                             <h3 class="ds-work-tilte">Développement</h3>
-                            <p>Je suis passionné par la programmation et j'aime consacrer mon temps libre à travailler
-                                sur des projets personnels. J'ai notamment fais un site web et un projet de data.
-                                Ces deux projets ont été très gratifiant et instructif</p>
+                            <p>La programmation et le développement font partie des domaines que j’ai découvert au
+                                lycée. J’ai pu réaliser durant cette période un site pour un artisan posant des portes.
+                                Durant ma première année de licence j’ai aussi eu l’occasion de manipuler des données en
+                                Data Science. </p>
                             <a href="works-setails.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                        <figure><img src="assets/images/work-1.jpg"></figure>
+                        <figure><img src="assets/images/Miniature_dev.png"></figure>
                     </div>
                 </div>
             </div>
@@ -198,15 +199,14 @@
                     <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                         <section>
                             <h3 class="ds-work-tilte">Affiches</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare
-                                metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique
-                                efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non
-                                sodales. </p>
+                            <p>Lors de projets scolaires et de stages, j’ai eu l’occasion de réaliser différents
+                                visuels, notamment des affiches. Ces expériences m’ont permis de découvrir des logiciels
+                                de la suite Adobe tels que Photoshop et Illustrator.</p>
                             <a href="affiches.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                        <figure><img src="assets/images/work-2.jpg"></figure>
+                        <figure><img src="assets/images/Miniature_affiches.png"></figure>
                     </div>
                 </div>
             </div>
@@ -215,15 +215,31 @@
                     <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
                         <section>
                             <h3 class="ds-work-tilte">Audiovisuel</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare
-                                metus ut, congue enim. Sed fermentum nulla tellus, quis efficitur mauris tristique
-                                efficitur. Aliquam rhoncus sem sed ullamcorper venenatis. Aenean malesuada eu orci non
-                                sodales. </p>
+                            <p>L’audiovisuel est un domaine large et passionnant dans lequel j’ai pu m’épanouir, j’ai pu
+                                consacrer mon temps au montage de plusieurs projets. Tous ne sont pas présents ici
+                                malheureusement. Cependant j’ai exploré plusieurs aspects de ce monde et en particulier
+                                le Stop motion.</p>
                             <a href="works-setails.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
-                        <figure><img src="assets/images/work-3.jpg"></figure>
+                        <figure><img src="assets/images/Miniature_audiovisuel.png"></figure>
+                    </div>
+                </div>
+            </div>
+            <div class="ds-work-list">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+                        <section>
+                            <h3 class="ds-work-tilte">Dessin</h3>
+                            <p>Le dessin fait partie des activités auxquelles j’ai pu consacrer de mon temps, depuis mon
+                                enfance je dessine. Je partage sur ce site certains d’entre eux ainsi que le procédé
+                                menant à leur réalisation.</p>
+                            <a href="works-setails.html" class="ds-button">Détails</a>
+                        </section>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
+                        <figure><img src="assets/images/Miniature_dessins.png"></figure>
                     </div>
                 </div>
             </div>
