--- a/dev.html
+++ b/dev.html
@@ -18,9 +18,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Main CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
+
+
     <title>PORTFOLIO - anaelle DE FREITAS</title>
 </head>
 <body>
+
 <!-- header -->
 <header class="ds-header" id="site-header">
     <div class="container">
@@ -51,41 +54,17 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10 col-xxl-10">
                     <header class="ds-work-det-hed">
-                        <h1 class="ds-work-det-title">Affiches</h1>
-                        <span class="ds-work-det-dep">Ce carrousel présente les affiches que j’ai pu réaliser, en classe de 3ème j’ai eu l’occasion de réaliser trois affiches. Lors d’un cours de français nous avions pour consigne de réaliser une affiche sur la pollution et le plastique. Puis lors de mon stage dans le service de communication de la COR, j’ai réalisé deux affiches, une portant sur un évènement adressé aux enfants et une autre pour l’ouverture d’un site.
-En première j’ai ensuite réalisé une affiche dans le cadre d’une présentation orale sur la verticalisation. Ayant suivi un enseignement franco-italien, cette affiche a été réalisée en italien en cours d’histoire.
-</span>
+                        <h1 class="ds-work-det-title">Développement</h1>
+                        <span class="ds-work-det-dep">En 2020, j’ai eu l’occasion de réaliser le site d’un artisan, c’était le premier site que je réalisais. Aujourd’hui, cet artisan a changé de domaine et n’utilise donc plus ce site, cependant si cela avait été le cas, j’aurais amélioré nombre de points.
+Durant mon année de licence, j’ai pu réaliser une analyse de données en Data Science, s’attardant sur les inégalités sociales face aux maladies chroniques. Le projet a abouti à un rapport dans lequel chaque graphique est présenté.</span>
                     </header>
-
-                    <div id="carouselExample" class="carousel slide">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="assets/images/affiche_evenement_lac_des_sapins_cor.jpg" class="d-block w-100"
-                                     alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/images/affiche_nouveau_site_cor.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/images/affiche_pollution.jpg" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/images/manifesto_verticalizzazione.png" class="d-block w-100"
-                                     alt="...">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                                data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                                data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                    <div class="ds-button-sec text-center">
+                        <a href="assets/DE_FREITAS_Anaelle-inégalites_sociales_maladies_chroniques.pdf"
+                           class="ds-button"
+                           download="assets/DE_FREITAS_Anaelle-inégalites_sociales_maladies_chroniques.pdf">Mon
+                            rapport</a>
+                        <figure><img src="assets/images/projet_data.png"></figure>
                     </div>
-
                 </div>
             </div>
         </div>
