--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 lycée. J’ai pu réaliser durant cette période un site pour un artisan posant des portes.
                                 Durant ma première année de licence j’ai aussi eu l’occasion de manipuler des données en
                                 Data Science. </p>
-                            <a href="works-setails.html" class="ds-button">Détails</a>
+                            <a href="dev.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
