--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 consacrer mon temps au montage de plusieurs projets. Tous ne sont pas présents ici
                                 malheureusement. Cependant j’ai exploré plusieurs aspects de ce monde et en particulier
                                 le Stop motion.</p>
-                            <a href="works-setails.html" class="ds-button">Détails</a>
+                            <a href="audiovisuel.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
