--- a/affiches.html
+++ b/affiches.html
@@ -57,7 +57,7 @@ En première j’ai ensuite réalisé une affiche dans le cadre d’une présent
 </span>
                     </header>
 
-                    <div id="carouselExample" class="carousel slide">
+                    <div id="c1" class="carousel slide custom_carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="assets/images/affiche_evenement_lac_des_sapins_cor.jpg" class="d-block w-100"
@@ -74,12 +74,12 @@ En première j’ai ensuite réalisé une affiche dans le cadre d’une présent
                                      alt="...">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#c1"
                                 data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        <button class="carousel-control-next" type="button" data-bs-target="#c1"
                                 data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
