--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <p>Le dessin fait partie des activités auxquelles j’ai pu consacrer de mon temps, depuis mon
                                 enfance je dessine. Je partage sur ce site certains d’entre eux ainsi que le procédé
                                 menant à leur réalisation.</p>
-                            <a href="works-setails.html" class="ds-button">Détails</a>
+                            <a href="dessin.html" class="ds-button">Détails</a>
                         </section>
                     </div>
                     <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
